--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -9,16 +9,13 @@
  
 <body>
     <header>
-        <h1 contenteditable>Header</h1>
-        <nav>
-         Home
-         Projects
-         Services
-         Contatc Us
-        </nav>
-        
-
+        <h1 contenteditable>Header Content </h1>
+        <a href="#home">Home</a>
+        <a href="#projects">Projects</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact Us</a>
       </header>
+      
       <div class="left-sidebar" contenteditable>Left Sidebar</div>
       <main contenteditable></main>
       <div class="right-sidebar" contenteditable>Right Sidebar</div>
