--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
 
 <body>
 
@@ -39,7 +42,7 @@
             </div>
         
             <section class="resources">
-                <h2>Web Dev Resources</h2>
+                <h4>Web Dev Resources</h4>
                 <ul>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
                     <li><a href="https://squoosh.app/" target="_blank">Squoosh</a></li>
