--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>wdd131: Dynamic Web fundamentals - Norlando Junior</title>
-    <meta name="Author" content="Norlando Junior">
-    <meta name="Description" content="This is a home page the course WDD 131 - Dynamic Web Fundamentals creat by Norlando Santos Barbosa Junior">
+    <title>WDD 131 - Dynamic Web Fundamentals - Norlando Junior</title>
+    <meta name="author" content="Norlando Junior">
+    <meta name="Description" content="This is my main page for the wdd131 profiling course, this page will be the main page that will lead to my other future projects and I will be able to follow my development with html, java script and CSS">
     <link href="styles/base.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <h1>WDD131: Dynamic Web Fundamentals - Norlando Junior</h1>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Norlando Junior</h1>
         <nav>
             <a href="https://www.linkedin.com/in/norlando-junior-0190a4341/">Linkedin</a>
             <a href="https://byupw.instructure.com/">Canvas</a>
@@ -42,10 +42,16 @@
             </div>
         
             <section class="resources">
-                <h4>Web Dev Resources</h4>
+                <h2>Web Dev Resources</h2>
                 <ul>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
                     <li><a href="https://squoosh.app/" target="_blank">Squoosh</a></li>
+                    <li><a href="https://dev.to" target="_blank">Dev.to Community</a></li>
+                    <li><a href="https://www.smashingmagazine.com" target="_blank">Smashing Magazine</a></li>
+                    <li><a href="https://css-tricks.com" target="_blank">CSS Tricks</a></li>
+                    <li><a href="https://www.w3schools.com" target="_blank">W3 Schools</a></li>
+                    <li><a href="https://www.udemy.com" target="_blank">Udemy</a></li>
+                    <li><a href="https://placeholder.com" target="_blank">Image Placeholder</a></li>
                 </ul>
             </section>
         </main>
