--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          <p id="lastModified"></p>
          
          <script src="scripts/getdates.js"></script>
-
+         <script src="scripts/getdates.js" defer></script>
     </footer>
     
 </body>
