--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WDD 131 - Dynamic Web Fundamentals - Norlando Junior</title>
     <meta name="author" content="Norlando Junior">
-    <meta name="Description" content="This is my main page for the wdd131 profiling course, this page will be the main page that will lead to my other future projects and I will be able to follow my development with html, java script and CSS">
+    <meta name="Description" content="Welcome to my WDD 131 profiling course page. This main page serves as a hub for my future projects, showcasing my growth in HTML, JavaScript, and CSS. Follow along as I document my development journey and share exciting web development experiments.">
     <link href="styles/base.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
