--- a/temples.html
+++ b/temples.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temples</title>
+    <title>Temple Album</title>
+    <meta name="author" content="Norlando Santos Barbosa Junior">
+    <meta name="description" content="This site contains photos of temples from different places around the world">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -25,9 +27,9 @@
     </header>
 
     <main>
-        <h2>Temples</h2>
+        <h2>Temple Album</h2>
         <div class="container">
-            <!-- Exemplos de figuras -->
+            
             <figure>
                 <img src="images/aba-nigeria-temple.jpg" alt="Aba Nigeria Temple">
                 <figcaption>Aba Nigeria</figcaption>
