--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
 
 
     <footer>
-         <p>
-            &copy; <span id="currentyear"></span> 👾 Norlando Santos Barbosa Junior 👾 Brazil.
-         </p>
-
+         <p>&copy; <span id="currentyear"></span> 👾 Norlando Santos Barbosa Junior 👾 Brazil. </p>
          <p id="lastModified"></p>
-         
          <script src="scripts/getdates.js"></script>
          <script src="scripts/getdates.js" defer></script>
     </footer>
