--- a/place.html
+++ b/place.html
@@ -5,14 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Norlando Santos Barbosa Junior">
-    <meta name="description" content="Explore São Paulo: information about its area, population, weather, and more.">
-    <title>São Paulo - City Overview</title>
-
-    <!-- Stylesheets -->
+    <meta name="description" content="São Paulo: information about its area, population, weather, and more.">
+    <title>São Paulo - City</title>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/places-responsive.css">
-
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&family=Ubuntu:wght@300..700&display=swap" rel="stylesheet">
@@ -32,7 +28,7 @@
             </picture>
 
             <div class="info-box data">
-                <h2><Data>Data</Data></h2>
+                <h2>Data</h2>
                 <ul>
                     <li><strong>Area:</strong> 1,523 sq km</li>
                     <li><strong>Population:</strong> 22,990,000</li>
@@ -63,7 +59,6 @@
         <script src="scripts/getdates.js" defer></script>
     </footer>
 
-    <!-- Scripts -->
     <script src="scripts/place.js" defer></script>
 </body>
 
