--- a/place.html
+++ b/place.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="info-box weather">
-                <h2>Weather <span class="weather-icon" aria-hidden="true">⛅</span></h2>
+                <h2>Weather <span class="weather-icon" aria-hidden="true"><img src="images/weather_clouds_fog_foggy_icon.svg" alt="Clouds"></span></h2>
                 <ul>
                     <li><strong>Temperature:</strong> 21°C</li>
                     <li><strong>Conditions:</strong> Light rain</li>
