--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -40,7 +40,7 @@
             
             <div class="card">
                 <h3>Apia Samoa</h3>
-                <p><strong>Location:</strong>Apia, Samoa</p>
+                <p><strong>Location:</strong> Apia, Samoa</p>
                 <p><strong>Dedicated:</strong> 1983, August 5</p>
                 <p><strong>Size:</strong> 18,691 sq ft</p>
                 <img src="images/apia-samoa-temple.jpg" alt="Apia Samoa Temple" loading="lazy">
@@ -48,31 +48,31 @@
 
             <div class="card">
                 <h3>Belem Brazil</h3>
-                <p><strong>Location:</strong>Belem, Brazil</p>
+                <p><strong>Location:</strong> Belem, Brazil</p>
                 <p><strong>Dedicated:</strong> 2020, November 22</p>
                 <p><strong>Size:</strong> 28,000 sq ft</p>
                 <img src="images/belem_brazil_temple.jpg" alt="Belem Brazil Temple" loading="lazy">
             </div>
 
             <div class="card">
-                <h3>Ber Switzerland</h3>
-                <p><strong>Location:</strong>Ber, Switzerland</p>
-                <p><strong>Dedicated:</strong> </p>
-                <p><strong>Size:</strong> </p>
+                <h3>Bern Switzerland</h3>
+                <p><strong>Location:</strong> Bern, Switzerland</p>
+                <p><strong>Dedicated:</strong> 1955, Setember 15</p>
+                <p><strong>Size:</strong> 35,546 sq ft</p>
                 <img src="images/ber-switzerland-temple.jpg" alt="Ber Switzerland">
             </div>
 
             <div class="card">
                 <h3>Boise Idaho</h3>
-                <p><strong>Location:</strong>Boise, Idaho</p>
-                <p><strong>Dedicated:</strong> </p>
-                <p><strong>Size:</strong> </p>
+                <p><strong>Location:</strong> Boise, Idaho</p>
+                <p><strong>Dedicated:</strong> 1984, May 30</p>
+                <p><strong>Size:</strong> 35,868 sq ft</p>
                 <img src="images/Boise-Idaho-Temple.jpg" alt="Boise Idaho">
             </div>
 
             <div class="card">
                 <h3>Campinas São Paulo</h3>
-                <p><strong>Location:</strong>Campinas, São Paulo</p>
+                <p><strong>Location:</strong> Campinas, São Paulo</p>
                 <p><strong>Dedicated:</strong> </p>
                 <p><strong>Size:</strong> </p>
                 <img src="images/campinas-brazil-temple.jpg" alt="Campinas São Paulo">
@@ -80,33 +80,33 @@
 
             <div class="card">
                 <h3>Colonia Juarez Chihuahua Mexico</h3>
-                <p><strong>Location:</strong>Colonia Juarez Chihuahua, Mexico</p>
-                <p><strong>Dedicated:</strong> </p>
-                <p><strong>Size:</strong> </p>
+                <p><strong>Location:</strong> Colonia Juarez Chihuahua, Mexico</p>
+                <p><strong>Dedicated:</strong> 1999, March 7</p>
+                <p><strong>Size:</strong> 6,800 sq ft</p>
                 <img src="images/colonia-juarez-chihuahua-mexico-temple.jpg" alt="Colonia Juarez Chihuahua Mexico">
             </div>
 
             <div class="card">
                 <h3>Recife Brazil</h3>
-                <p><strong>Location:</strong>Recife, Brazil</p>
-                <p><strong>Dedicated:</strong> </p>
-                <p><strong>Size:</strong> </p>
+                <p><strong>Location:</strong> Recife, Brazil</p>
+                <p><strong>Dedicated:</strong> 2000, December 15</p>
+                <p><strong>Size:</strong> 37,200 sq ft</p>
                 <img src="images/recife-brazil-temple.jpg" alt="Recife Brazil">
             </div>
 
             <div class="card">
                 <h3>São Paulo Brazil</h3>
-                <p><strong>Location:</strong>São Paulo, Brazil</p>
-                <p><strong>Dedicated:</strong> </p>
-                <p><strong>Size:</strong> </p>
+                <p><strong>Location:</strong> São Paulo, Brazil</p>
+                <p><strong>Dedicated:</strong> 1978, November 2</p>
+                <p><strong>Size:</strong> 59,246 sq ft</p>
                 <img src="images/sao-paulo-temple.jpg" alt="São Paulo Brazil">
             </div>
 
             <div class="card">
                 <h3>Frankfurt Temple</h3>
-                <p><strong>Location:</strong>Frankfurt, Temple</p>
-                <p><strong>Dedicated:</strong> </p>
-                <p><strong>Size:</strong> </p>
+                <p><strong>Location:</strong> Frankfurt, Temple</p>
+                <p><strong>Dedicated:</strong> 1987, August 30</p>
+                <p><strong>Size:</strong> 32,895 sq ft</p>
                 <img src="images/frankfurt-temple.jpg" alt="Frankfurt Temple">
             </div>
 
