--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -71,10 +71,10 @@
             </div>
 
             <div class="card">
-                <h3>Campinas São Paulo</h3>
-                <p><strong>Location:</strong> Campinas, São Paulo</p>
-                <p><strong>Dedicated:</strong> </p>
-                <p><strong>Size:</strong> </p>
+                <h3>Campinas Brazil</h3>
+                <p><strong>Location:</strong> Campinas, Brazil</p>
+                <p><strong>Dedicated:</strong> 2002, May 17</p>
+                <p><strong>Size:</strong> 48,100 sq ft</p>
                 <img src="images/campinas-brazil-temple.jpg" alt="Campinas São Paulo">
             </div>
 
