--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -17,11 +17,11 @@
         <button id="hamburger" aria-label="Toggle Menu">☰</button>
         <nav id="main-nav" class="hidden">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="old.html">Old</a></li>
-                <li><a href="new.html">New</a></li>
-                <li><a href="large.html">Large</a></li>
-                <li><a href="small.html">Small</a></li>
+                <a href="index.html" data-filter="all">Home</a>
+                <a href="old.html" data-filter="old">Old</a>
+                <a href="new.html" data-filter="new">New</a>
+                <a href="large.html" data-filter="large">Large</a>
+                <a href="small.html" data-filter="small">Small</a>
             </ul>
         </nav>
     </header>
