--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -37,6 +37,7 @@
     <footer>
         <p>&copy; <span id="year"></span> 👾 Norlando Santos Barbosa Junior 👾 Brazil </p>
         <p>Last Modified: <span id="lastModified"></span></p>
+        <script src="scripts/getdates.js" defer></script>
     </footer>
 
 </body>
