--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -8,6 +8,8 @@
     <meta name="description" content="This site contains photos of temples from different places around the world">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script type="module" src="scripts/main.js"></script>
 </head>
