--- a/pilots.html
+++ b/pilots.html
@@ -18,6 +18,6 @@
             <a href="subject.html">Home</a>
             <a href="cars.html">Cars</a>
             <a href="pilots.html">Pilots</a>
-            <a href="teams.html">tems</a>
+            <a href="teams.html">Teams</a>
         </nav>
     </header>
