--- a/form.html
+++ b/form.html
@@ -8,6 +8,10 @@
     <meta name="description" content="On this web page we will use form functions to present a product evaluation form">
     <link rel="stylesheet" href="styles/from-mobile.css">
     <link rel="stylesheet" href="styles/from-big-screen.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
 
