--- a/form.html
+++ b/form.html
@@ -16,6 +16,8 @@
 <body>
 
     <main>
+
+
         <h1>Product Review</h1>
 
         <fieldset>
@@ -66,14 +68,21 @@
 
         <fieldset>
             <legend>Written Review(optional)</legend>
-            <input type="text" name="Review user">
+            <textarea name="Review user"></textarea>
         </fieldset>
 
         <fieldset>
             <legend>Your name (optional)</legend>
             <input type="text" name="User name">
         </fieldset>
+
+        <div class="submit-container">
+            <input type="submit" value="Propose My Course">
+        </div>
+
+
     </main>
+
     
 
     <footer>
