--- a/form.html
+++ b/form.html
@@ -81,7 +81,7 @@
             </fieldset>
 
             <div class="submit-container">
-                <input type="submit" value="Submit Review">
+                <input type="submit" value="Submit">
             </div>
         </form>
 
