--- a/review.html
+++ b/review.html
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review</title>
     <meta name="author" content="Norlando Santos Barbosa Junior">
-    <meta name="description" content="On this web page we will use form functions to present a product evaluation form">
+    <meta name="description" content="Thank you for submitting your review!">
     <link rel="stylesheet" href="styles/from-mobile.css">
     <link rel="stylesheet" href="styles/from-big-screen.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <script src="scripts/form.js" defer></script>
 </head>
 <body>
 
     <main>
 
         <h1>Review sent successfully!</h1>
+        <p id="reviewCounter"></p>
 
-        <P>Thank you for evaluating our products!</P>
-        
     </main>
 
     <footer>
