--- a/form.html
+++ b/form.html
@@ -82,7 +82,7 @@
             </fieldset>
 
             <div class="submit-container">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Send Review">
             </div>
         </form>
 
